TEST_PROGRAMS/INVALID/Fan_Jin/decl-after-stm.min
var x: int;
var y: string;

y = "bonjour";
x = y + 3;

var z: string;

z = "hey";

if x then
  print z;
else
  print "not " + z;
endif
